--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 :root{
     --black-color : #070707;
-    --grey-color : #575757;
+    --grey-color : #111;
     --white-color : #ffffff;
 }
 
@@ -53,7 +53,7 @@ nav, main {
 
 /* ################################## NAVBAR ################################## */
 .navbar-black {
-    background-color: var(--black-color);
+    background-color: var(--grey-color);
 }
 
 nav{
@@ -64,6 +64,7 @@ nav{
     padding-right: 160px;
     position: fixed;
     z-index: 100;
+    transition: background-color 0.5s ease;
 }
 
 .logo {
@@ -89,12 +90,18 @@ nav ul li a{
     text-decoration: none;
 }
 
-.btn-contact {
+.btn-contact a {
     border: 1px solid var(--white-color);
-    border-radius: 25px;
-    padding: 10px 20px; 
+    border-radius: 20px;
+    padding: 10px 50px; 
     display: inline-block;
     line-height: 30px; 
+    transition: background 0.3s, color 0.3s;
+}
+
+.btn-contact a:hover {
+    background: var(--white-color);
+    color: var(--black-color);
 }
 
 .checkbtn{
@@ -213,7 +220,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 15%;
-    background: linear-gradient(to top, black, transparent);
+    background: linear-gradient(to top, var(--black-color), transparent);
 }
 
 .overlay {
@@ -410,13 +417,90 @@ nav ul li a{
 
 /* ################################## END EXPERIENCE ################################## */
 
+/* ################################## HERO ################################## */
+.hero {
+    position: relative;
+    width: 60%;
+    min-height: 50vh;
+    background: url('/assets/images/hero.jpg') no-repeat center center/cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin: 40px auto; 
+    padding: 40px 0; 
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('/assets/images/black-overlay.png') no-repeat center center/cover; 
+    background-size: cover;
+    z-index: 1;
+}
+
+.hero-content {
+    position: relative;
+    z-index: 2; 
+    color: var(--white-color);
+}
+
+.hero h1 {
+    font-size: 40px; 
+    margin-bottom: 50px;
+}
+
+.hero a.hero-btn {
+    padding: 10px 20px;
+    border: 1px solid var(--white-color);
+    border-radius: 20px;
+    padding: 10px 50px;
+    text-decoration: none;
+    color: var(--white-color);
+    font-size: 1.2rem;
+    transition: background 0.3s, color 0.3s;
+}
+
+.hero a.hero-btn:hover {
+    background: var(--white-color);
+    color: var(--black-color);
+}
+
+
+@media (max-width: 768px) {
+    .hero {
+        width: 80%; 
+        min-height: 20vh; 
+        padding: 20px 0;
+        margin-top: 100px; 
+        margin-bottom: 100px; 
+    }
+
+    .hero h1 {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .hero a.hero-btn {
+        font-size: 10px;
+        padding: 8px 15px;
+    }
+}
+/* ################################## END HERO ################################## */
+
+
 /* ################################## FOOTER ################################## */
 
 .footer {
-    background-color: #4a4a4a;
+    background-color: var(--grey-color);
     padding: 20px;
     margin-top: 100px;
-    color: white;
+    color: var(--white-color);
     text-align: center;
 }
 .footer .name {
@@ -426,6 +510,7 @@ nav ul li a{
 .footer .description {
     font-size: 16px;
     margin: 10px 0;
+    margin-bottom: 20px;
 }
 .footer .contact {
     display: flex;
@@ -434,7 +519,7 @@ nav ul li a{
     margin-top: 20px;
 }
 .footer .contact a {
-    color: white;
+    color: var(--white-color);
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -445,10 +530,14 @@ nav ul li a{
     height: 24px;
 }
 
+.footer .contact a:hover {
+    color: #1e90ff;
+}
+
 @media (max-width: 768px) {
     .footer {
         padding: 20px;
-        margin-top: 30px; 
+        margin-top: 80px; 
         text-align: center;
     }
     .footer .name {
@@ -467,7 +556,7 @@ nav ul li a{
         font-size: 10px;
     }
     .footer .contact a {
-        color: white;
+        color: var(--white-color);
         text-decoration: none;
         display: inline-block;
         margin: 0 5px; 
