--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ nav ul li a{
         padding-bottom: 0px;
     }
     nav ul li a{
-        font-size: 10px;
+        font-size: 15px;
     }
     #check:checked ~ ul{
         right: 0;
@@ -189,7 +189,7 @@ nav ul li a{
     #check:checked ~ .closebtn{
         display: block;
     }
-    .btn-contact {
+    .btn-contact a{
         border: 1px solid var(--white-color);
         border-radius: 15px;
         padding: 10px 30px; 
