--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/assets/images/black-overlay.png');
+    background: url('assets/images/black-overlay.png');
     background-size: cover;
     z-index: 2;
 }
@@ -422,7 +422,7 @@ nav ul li a{
     position: relative;
     width: 60%;
     min-height: 50vh;
-    background: url('/assets/images/hero.jpg') no-repeat center center/cover;
+    background: url('assets/images/hero.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -439,7 +439,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/assets/images/black-overlay.png') no-repeat center center/cover; 
+    background: url('assets/images/black-overlay.png') no-repeat center center/cover; 
     background-size: cover;
     z-index: 1;
 }
