--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('assets/images/black-overlay.png');
+    background: url('/assets/images/black-overlay.png');
     background-size: cover;
     z-index: 2;
 }
@@ -418,17 +418,18 @@ nav ul li a{
 /* ################################## END EXPERIENCE ################################## */
 
 /* ################################## HERO ################################## */
+/* HERO */
 .hero {
     position: relative;
     width: 60%;
     min-height: 50vh;
-    background: url('assets/images/hero.jpg') no-repeat center center/cover;
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    margin: 40px auto; 
-    padding: 40px 0; 
+    margin: 40px auto;
+    padding: 40px 0;
     margin-top: 150px;
     margin-bottom: 150px;
 }
@@ -439,19 +440,19 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('assets/images/black-overlay.png') no-repeat center center/cover; 
+    background: url('/assets/images/black-overlay.png') no-repeat center center/cover; 
     background-size: cover;
     z-index: 1;
 }
 
 .hero-content {
     position: relative;
-    z-index: 2; 
+    z-index: 2;
     color: var(--white-color);
 }
 
 .hero h1 {
-    font-size: 40px; 
+    font-size: 40px;
     margin-bottom: 50px;
 }
 
@@ -471,6 +472,27 @@ nav ul li a{
     color: var(--black-color);
 }
 
+@media (max-width: 768px) {
+    .hero {
+        width: 80%;
+        min-height: 20vh;
+        padding: 20px 0;
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+
+    .hero h1 {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .hero a.hero-btn {
+        font-size: 10px;
+        padding: 8px 15px;
+    }
+}
+
+
 
 @media (max-width: 768px) {
     .hero {
@@ -482,7 +504,9 @@ nav ul li a{
     }
 
     .hero h1 {
-        font-size: 20px;
+        font-size: 18px;
+        margin-left: 20px;
+        margin-right: 20px;
         margin-bottom: 20px;
     }
 
