--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://deaprima.github.io/PORTOFOLIO/assets/images/black-overlay.png');
+    background: url('assets/images/hero.jpg');
     background-size: cover;
     z-index: 2;
 }
