--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://deaprima.github.io/PORTOFOLIO/assets/images/black-overlay.png');
+    background: rgba(0, 0, 0, 0.6);
     background-size: cover;
     z-index: 2;
 }
@@ -440,7 +440,7 @@ nav ul li a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://deaprima.github.io/PORTOFOLIO/assets/images/black-overlay.png') no-repeat center center/cover; 
+    background: rgba(0, 0, 0, 0.6);
     background-size: cover;
     z-index: 1;
 }
